# gasol-ppa

./: COPYING  Makefile.am  configure.ac
debian/: changelog  control  gasol-basic.install  gasol-basic.links  rules
fontconfig/: 69-language-selector-droid.conf
