AC_PREREQ([2.68])
AC_INIT([gasol-ppa], [1.0.0], [gasol.wu@gmail.com])
AM_INIT_AUTOMAKE([foreign])
AC_PREFIX_DEFAULT([/usr])
test "$sysconfdir" = '${prefix}/etc' && sysconfdir=/etc

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MKDIR_P

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
